--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     patches/hurd-i386/cvs-ldsodefs.h.diff
   * patches/hurd-i386/submitted-sgttyb.diff: New patch to fix sgttyb ioctls
     values.
+  * patches/hurd-i386/tg-dup3.diff: New patch from Hurd topgit to implement dup3.
+  * patches/hurd-i386/submitted-dup2-fix.diff: Trivially port to dup3.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
