--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ eglibc (2.13-22) UNRELEASED; urgency=low
   * patches/hurd-i386/cvs-sgttyb.diff: New patch to fix sgttyb ioctls values.
   * patches/hurd-i386/tg-dup3.diff: New patch from Hurd topgit to implement dup3.
   * patches/hurd-i386/submitted-dup2-fix.diff: Trivially port to dup3.
+  * patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: New patch to
+    brown-tape fix iceweasel.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
