--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,7 @@ eglibc (2.13-22) UNRELEASED; urgency=low
     brown-tape fix iceweasel.
   * patches/hurd-i386/submitted-_hurd_socket_server-indexcheck.diff: New patch
     from Pino Toscano to fix crash or spurious deallocation on bogus input.
+  * libc0.3.symbols.hurd-i386: Drop removed unused xxx_ and yyy_ RPCs.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3763 (from glibc-bsd).
